--- a/index.html
+++ b/index.html
@@ -36,34 +36,34 @@
         <picture id="InformationTechnology">
             <img src="Information Technology.png" alt="">
         </picture>
-        <div class="flex" style="float: right; padding: 50px; max-width: 500px;">
-            <picture id="moon">
-                <img src="lokoPK.png" alt="">
-            </picture>
-            <h2>
-                Oferecemos mentorias com certificados reconhecidos pelo MEC
-            </h2>
-                        <picture id="verificado">
-                <img src="verificado.png" alt="">
-            </picture>
-        </div>
         <h1>
             Seu espaço digital é a peça que faltava !
         </h1>
-                      <h1>
-            Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+        <picture id="moon">
+            <img src="lokoPK.png" alt="">
+        </picture>
+           <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF61RSzQoI&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+         </iframe>
+       </div>
+       <h1>
+        Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>   
+    <section>
+        <h1>
+            Venha conversar e compartilhe sua ideia conosco.
         </h1>
-             <picture id="predio">
+        <p>
+            Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o
+            time de Desenvolvedores
+        </p>
+    </section>           
+        <picture id="predio">
             <img src="www.reallygreatsite.com.png" alt="">
-        </picture>  
-        <section>
-            <h1>
-                Venha conversar e compartilhe sua ideia conosco.
-            </h1>  
-            <p>
-                Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de Desenvolvedores
-            </p>
-        </section>
+        </picture>
               <section>
             <p>
                 Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
@@ -87,73 +87,73 @@
             Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
         </h1>
         <div style="background: #230D73; color: white;">
-<p style="color: white; font-size: larger; text-align: center;">
-            Clique em alguns... fique avontade
-        </p>
-        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-            <button>
-                Barber shop platform
-                <picture id="miniLogoProjetos">
-                    <img src="logoBarbeiro.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
-            <button>
-                Duarte & Santos
-                <picture id="miniLogoProjetos">
-                    <img src="logoADV.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
-            <button>
-                Homem-Arranha
-                <picture id="miniLogoProjetos">
-                    <img src="logoHomemAranha.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
-            <button>
-                CRM
-                <picture id="miniLogoProjetos">
-                    <img src="iconsMoon.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
-            <button>
-                Multiplanos
-                <picture id="miniLogoProjetos">
-                    <img src="Multiplanos.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
-            <button>
-                Zap Selling
-                <picture id="miniLogoProjetos">
-                    <img src="logo Zap Selling.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
-            <button>
-                Pizzabot
-                <picture id="miniLogoProjetos">
-                    <img src="logoStevePizza.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-            <button>
-                Guia do Programador
-                <picture id="miniLogoProjetos">
-                    <img src="logoGuiaDoProgramador.png" alt="">
-                </picture>
-            </button>
-        </a>
+            <p style="color: white; font-size: larger; text-align: center;">
+                Clique em alguns... fique avontade
+            </p>
+            <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+                <button>
+                    Barber shop platform
+                    <picture id="miniLogoProjetos">
+                        <img src="logoBarbeiro.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
+                <button>
+                    Duarte & Santos
+                    <picture id="miniLogoProjetos">
+                        <img src="logoADV.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
+                <button>
+                    Homem-Arranha
+                    <picture id="miniLogoProjetos">
+                        <img src="logoHomemAranha.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
+                <button>
+                    CRM
+                    <picture id="miniLogoProjetos">
+                        <img src="iconsMoon.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
+                <button>
+                    Multiplanos
+                    <picture id="miniLogoProjetos">
+                        <img src="Multiplanos.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
+                <button>
+                    Zap Selling
+                    <picture id="miniLogoProjetos">
+                        <img src="logo Zap Selling.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+                <button>
+                    Pizzabot
+                    <picture id="miniLogoProjetos">
+                        <img src="logoStevePizza.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+                <button>
+                    Guia do Programador
+                    <picture id="miniLogoProjetos">
+                        <img src="logoGuiaDoProgramador.png" alt="">
+                    </picture>
+                </button>
+            </a>
         </div>
         <p>
             Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
