--- a/index.html
+++ b/index.html
@@ -32,24 +32,29 @@
                     </a>
                 </ul>
             </nav>
-        </header>
-        <picture id="InformationTechnology">
-            <img src="Information Technology.png" alt="">
-        </picture>
+           <section style="background-color: #230D73; max-width: 800pv;">
+            <h1 style="color: white;">
+                A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado. 
+            </h1> 
+             <p style="color: white; font-size: medium;">
+                A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
+             </p>
+                 </section>
+            <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+            padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+            border-radius: 8px; will-change: transform;">
+             <iframe loading="lazy" controls="none" auto style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+               src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF61RSzQoI&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+             </iframe>
+           </div>
+                </header>
         <h1>
             Seu espaço digital é a peça que faltava !
         </h1>
         <picture id="moon">
             <img src="lokoPK.png" alt="">
         </picture>
-           <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-        border-radius: 8px; will-change: transform;">
-         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF61RSzQoI&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-         </iframe>
-       </div>
-       <h1>
+                <h1>
         Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
     </h1>   
     <section>
@@ -199,8 +204,11 @@
             CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
         </label>
     </div>
+    <picture id="InformationTechnology">
+        <img src="Information Technology.png" alt="">
+    </picture>
     <footer>
-        <p>
+           <p>
             Desenvolvido por
             <a href="https://www.instagram.com/nike_developer/" target="_blank">
                 <strong style="color: #230D73;">
