--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="interface">
-        <header>
+        <header style="background-color: #230D73;">
             <nav>
                 <ul>
                     <a href="#moon">
@@ -32,32 +32,24 @@
                     </a>
                 </ul>
             </nav>
-           <section style="background-color: #230D73; max-width: 800pv;">
             <h1 style="color: white;">
                 A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado. 
             </h1> 
              <p style="color: white; font-size: medium;">
                 A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
              </p>
-                 </section>
-            <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-            padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-            border-radius: 8px; will-change: transform;">
-             <iframe loading="lazy" controls="none" auto style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-               src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF61RSzQoI&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-             </iframe>
-           </div>
                 </header>
-        <h1>
-            Seu espaço digital é a peça que faltava !
-        </h1>
-        <picture id="moon">
-            <img src="lokoPK.png" alt="">
-        </picture>
+<div class="video">
+    <video src="Seu site é a sua vitrine virtual..mp4" autoplay muted loop></video>
+   </div>
+   <picture id="moon">
+    <img src="lokoPK.png" alt="">
+</picture>
+                       
                 <h1>
         Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
     </h1>   
-    <section>
+        <section>
         <h1>
             Venha conversar e compartilhe sua ideia conosco.
         </h1>
