--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                     </a>
                 </ul>
             </nav>
-            <h1 style="color: white;">
-                A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado. 
-            </h1> 
-             <p style="color: white; font-size: medium;">
+                <h1 style="color: white; text-align: justify;">
+                    A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado. 
+                </h1>
+                <div class="video">
+                    <video src="Seu site é a sua vitrine virtual..mp4" autoplay muted loop></video>
+                   </div>
+                        <p style="color: white; font-size: medium;">
                 A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
              </p>
                 </header>
-<div class="video">
-    <video src="Seu site é a sua vitrine virtual..mp4" autoplay muted loop></video>
-   </div>
    <picture id="moon">
     <img src="lokoPK.png" alt="">
 </picture>
