--- a/index.html
+++ b/index.html
@@ -32,36 +32,35 @@
                     </a>
                 </ul>
             </nav>
-                <h1 style="color: white; text-align: justify;">
-                    A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado. 
-                </h1>
-                <div class="video">
-                    <video src="Seu site é a sua vitrine virtual..mp4" autoplay muted loop></video>
-                   </div>
-                        <p style="color: white; font-size: medium;">
-                A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
-             </p>
-                </header>
-   <picture id="moon">
-    <img src="lokoPK.png" alt="">
-</picture>
-                       
-                <h1>
-        Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-    </h1>   
-        <section>
-        <h1>
-            Venha conversar e compartilhe sua ideia conosco.
+        </header>
+            <video src="SEU SITE É SUA VITRINE VIRTUAL (1).mp4" autoplay muted loop></video>     
+        <h1 style="color: #230D73; text-align: justify;">
+            A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado.
         </h1>
-        <p>
-            Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o
-            time de Desenvolvedores
+        <p style="color: white; font-size: medium;">
+            A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as
+            últimas tendências tecnológicas.
         </p>
-    </section>           
+        <picture id="moon">
+            <img src="lokoPK.png" alt="">
+        </picture>
+
+        <h1>
+            Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+        </h1>
+        <section>
+            <h1>
+                Venha conversar e compartilhe sua ideia conosco.
+            </h1>
+            <p>
+                Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o
+                time de Desenvolvedores
+            </p>
+        </section>
         <picture id="predio">
             <img src="www.reallygreatsite.com.png" alt="">
         </picture>
-              <section>
+        <section>
             <p>
                 Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
                 que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
@@ -200,7 +199,7 @@
         <img src="Information Technology.png" alt="">
     </picture>
     <footer>
-           <p>
+        <p>
             Desenvolvido por
             <a href="https://www.instagram.com/nike_developer/" target="_blank">
                 <strong style="color: #230D73;">
