--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                 </ul>
             </nav>
         </header>
-            <video src="SEU SITE É SUA VITRINE VIRTUAL (1).mp4" autoplay muted loop></video>     
+        <picture>
+            <source media="(max-width: 500px)" srcset="SEU SITE É SUA VITRINE VIRTUAL (2).mp4">
+            <video src="SEU SITE É SUA VITRINE VIRTUAL (1).mp4" autoplay muted loop></video>   
+        </source>
+        </picture>  
         <h1 style="color: #230D73; text-align: justify;">
             A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado.
         </h1>
@@ -58,7 +62,7 @@
             </p>
         </section>
         <picture id="predio">
-            <img src="www.reallygreatsite.com.png" alt="">
+<video src="www.reallygreatsite.com.mp4" autoplay muted loop></video>
         </picture>
         <section>
             <p>
@@ -196,7 +200,7 @@
         </label>
     </div>
     <picture id="InformationTechnology">
-        <img src="Information Technology.png" alt="">
+<video src="Information Technology.mp4" autoplay muted loop></video>
     </picture>
     <footer>
         <p>
