--- a/index.html
+++ b/index.html
@@ -13,31 +13,35 @@
 </head>
 
 <body>
-    <div class="interface">
-        <header style="background-color: #230D73;">
-            <nav>
-                <ul>
+    <header>
+        <nav>
+            <ul>
+                <li>
                     <a href="#moon">
-                        <li>
-                            HOME
-                        </li>
+                        HOME
                     </a>
+                </li>
+                <li>
                     <a href="#prog">
-                        <li>PROJETOS</li>
+                        PROJETOS
                     </a>
+                </li>
+                <li>
                     <a href="#iframe">
-                        <li>
-                            NOS-CONTRATE
-                        </li>
+                        NOS-CONTRATE
                     </a>
-                </ul>
-            </nav>
-        </header>
-        <picture>
-            <source media="(max-width: 500px)" srcset="SEU SITE É SUA VITRINE VIRTUAL (2).mp4">
-            <video src="SEU SITE É SUA VITRINE VIRTUAL (1).mp4" autoplay muted loop></video>   
-        </source>
-        </picture>  
+                </li>
+            </ul>
+        </nav>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6_VU19lo&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6_VU19lo&#x2F;view?utm_content=DAF6_VU19lo&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">SEU SITE É SUA VITRINE VIRTUAL</a> de PK Producões
+    </header>
         <h1 style="color: #230D73; text-align: justify;">
             A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado.
         </h1>
@@ -48,7 +52,6 @@
         <picture id="moon">
             <img src="lokoPK.png" alt="">
         </picture>
-
         <h1>
             Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
         </h1>
@@ -61,9 +64,15 @@
                 time de Desenvolvedores
             </p>
         </section>
-        <picture id="predio">
-<video src="www.reallygreatsite.com.mp4" autoplay muted loop></video>
-        </picture>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+            <iframe loading="lazy"
+                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6tHK02tY&#x2F;view?embed"
+                allowfullscreen="allowfullscreen" allow="fullscreen">
+            </iframe>
+        </div>
         <section>
             <p>
                 Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
@@ -198,10 +207,16 @@
             INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
             CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
         </label>
+
+    <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+    padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+    border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy"
+            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
+            allowfullscreen="allowfullscreen" allow="fullscreen">
+        </iframe>
     </div>
-    <picture id="InformationTechnology">
-<video src="Information Technology.mp4" autoplay muted loop></video>
-    </picture>
     <footer>
         <p>
             Desenvolvido por
