--- a/index.html
+++ b/index.html
@@ -33,180 +33,181 @@
                 </li>
             </ul>
         </nav>
+    </header>
+    <picture id="moon">
+        <img src="lokoPK.png" alt="">
+    </picture>
+    <h1 style="color: #230D73; text-align: justify; max-width: 500px;">
+        <strong style="color: rgb(45, 84, 255);">PK Digital Products</strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
+    </h1>
         <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6_VU19lo&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6_VU19lo&#x2F;view?utm_content=DAF6_VU19lo&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">SEU SITE É SUA VITRINE VIRTUAL</a> de PK Producões
-    </header>
-        <h1 style="color: #230D73; text-align: justify;">
-            A PK Digital Products é reconhecida por sua qualidade, inovação e atendimento personalizado.
-        </h1>
-        <p style="color: white; font-size: medium;">
-            A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as
-            últimas tendências tecnológicas.
-        </p>
-        <picture id="moon">
-            <img src="lokoPK.png" alt="">
-        </picture>
-        <h1>
-            Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-        </h1>
-        <section>
-            <h1>
-                Venha conversar e compartilhe sua ideia conosco.
-            </h1>
-            <p>
-                Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o
-                time de Desenvolvedores
-            </p>
-        </section>
-        <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-        border-radius: 8px; will-change: transform;">
             <iframe loading="lazy"
                 style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6tHK02tY&#x2F;view?embed"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6_VU19lo&#x2F;view?embed"
                 allowfullscreen="allowfullscreen" allow="fullscreen">
             </iframe>
         </div>
-        <section>
-            <p>
-                Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
-                que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
-                profissional' que você a tempos sonha em ter
-            </p>
-        </section>
-        <p>
-            Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
-        </p>
-        <p>
-            Clique
-            <a href="#form" target="_blank">
-                <button type="button" id="ixd01">
-                    aqui
-                </button>
-            </a> para
-            acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
-        </p>
-        <h1 id="prog">
-            Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
-        </h1>
-        <div style="background: #230D73; color: white;">
-            <p style="color: white; font-size: larger; text-align: center;">
-                Clique em alguns... fique avontade
-            </p>
-            <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-                <button>
-                    Barber shop platform
-                    <picture id="miniLogoProjetos">
-                        <img src="logoBarbeiro.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
-                <button>
-                    Duarte & Santos
-                    <picture id="miniLogoProjetos">
-                        <img src="logoADV.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
-                <button>
-                    Homem-Arranha
-                    <picture id="miniLogoProjetos">
-                        <img src="logoHomemAranha.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
-                <button>
-                    CRM
-                    <picture id="miniLogoProjetos">
-                        <img src="iconsMoon.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
-                <button>
-                    Multiplanos
-                    <picture id="miniLogoProjetos">
-                        <img src="Multiplanos.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
-                <button>
-                    Zap Selling
-                    <picture id="miniLogoProjetos">
-                        <img src="logo Zap Selling.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
-                <button>
-                    Pizzabot
-                    <picture id="miniLogoProjetos">
-                        <img src="logoStevePizza.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-                <button>
-                    Guia do Programador
-                    <picture id="miniLogoProjetos">
-                        <img src="logoGuiaDoProgramador.png" alt="">
-                    </picture>
-                </button>
-            </a>
-        </div>
-        <p>
-            Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
-                UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
-            <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda
-            de
-            scripts ou modelos.
-        </p>
-        <p>
-            Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
-            computação e uma mistura de
-            engenharia social.
-        </p>
-        <picture id="grafico">
-            <img src="lucro.png" alt="">
-        </picture>
-        <h1 id="form">
-            <strong>
-                Aguardo ancioso para um entrevista.
-            </strong>
+       <p style="color: white; font-size: medium;">
+        A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as
+        últimas tendências tecnológicas.
+    </p>
+       <h1>
+        Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>
+    <section>
+        <h1>
+            Venha conversar e compartilhe sua ideia conosco.
         </h1>
         <p>
-            Clique
-            <a href="https://iplis.ru/meu-portifolio" target="_blank">
-                <button type="button" id="ixd01">
-                    aqui
-                </button>
-            </a>
-            para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
+            Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o
+            time de Desenvolvedores
         </p>
-        <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
-                style="border-radius: 15px;" src="digital.png" alt="digital"></a>
-        <iframe id="iframe"
-            src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-            frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-        <p style="text-align: center;">
-            <strong style="color: #230D73;">ATENÇÃO !</strong>
+    </section>
+    <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy"
+            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6tHK02tY&#x2F;view?embed"
+            allowfullscreen="allowfullscreen" allow="fullscreen">
+        </iframe>
+    </div>
+    <section>
+        <p>
+            Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
+            que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
+            profissional' que você a tempos sonha em ter
         </p>
-        <label>
-            RESUMINDO
-            (CRIAMOS PLATAFORMAS PARA
-            INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-            CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-        </label>
+    </section>
+    <p>
+        Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
+    </p>
+    <p>
+        Clique
+        <a href="#form" target="_blank">
+            <button type="button" id="ixd01">
+                aqui
+            </button>
+        </a> para
+        acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
+    </p>
+    <h1 id="prog">
+        Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
+    </h1>
+    <div style="background: #230D73; color: white;">
+        <p style="color: white; font-size: larger; text-align: center;">
+            Clique em alguns... fique avontade
+        </p>
+        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+            <button>
+                Barber shop platform
+                <picture id="miniLogoProjetos">
+                    <img src="logoBarbeiro.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
+            <button>
+                Duarte & Santos
+                <picture id="miniLogoProjetos">
+                    <img src="logoADV.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
+            <button>
+                Homem-Arranha
+                <picture id="miniLogoProjetos">
+                    <img src="logoHomemAranha.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
+            <button>
+                CRM
+                <picture id="miniLogoProjetos">
+                    <img src="iconsMoon.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
+            <button>
+                Multiplanos
+                <picture id="miniLogoProjetos">
+                    <img src="Multiplanos.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
+            <button>
+                Zap Selling
+                <picture id="miniLogoProjetos">
+                    <img src="logo Zap Selling.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+            <button>
+                Pizzabot
+                <picture id="miniLogoProjetos">
+                    <img src="logoStevePizza.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+            <button>
+                Guia do Programador
+                <picture id="miniLogoProjetos">
+                    <img src="logoGuiaDoProgramador.png" alt="">
+                </picture>
+            </button>
+        </a>
+    </div>
+    <p>
+        Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
+            UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
+        <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda
+        de
+        scripts ou modelos.
+    </p>
+    <p>
+        Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
+        computação e uma mistura de
+        engenharia social.
+    </p>
+    <picture id="grafico">
+        <img src="lucro.png" alt="">
+    </picture>
+    <h1 id="form">
+        <strong>
+            Aguardo ancioso para um entrevista.
+        </strong>
+    </h1>
+    <p>
+        Clique
+        <a href="https://iplis.ru/meu-portifolio" target="_blank">
+            <button type="button" id="ixd01">
+                aqui
+            </button>
+        </a>
+        para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
+    </p>
+    <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img style="border-radius: 15px;"
+            src="digital.png" alt="digital"></a>
+    <iframe id="iframe"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
+        frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+    <p style="text-align: center;">
+        <strong style="color: #230D73;">ATENÇÃO !</strong>
+    </p>
+    <label>
+        RESUMINDO
+        (CRIAMOS PLATAFORMAS PARA
+        INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
+        CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+    </label>
 
     <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
