--- a/index.html
+++ b/index.html
@@ -33,30 +33,28 @@
                 </li>
             </ul>
         </nav>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-bottom: 0.9em; overflow: hidden; will-change: transform;">
+         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF7IbNtW9M&#x2F;watch?embed" aria-controls="none"  allowfullscreen="allowfullscreen" allow="fullscreen">
+         </iframe>
+       </div>
+        <picture id="moon">
+            <img src="lokoPK.png" alt="">
+        </picture>
     </header>
-    <picture id="moon">
-        <img src="lokoPK.png" alt="">
-    </picture>
-    <h1 style="color: #230D73; text-align: justify; max-width: 500px;">
-        <strong style="color: rgb(45, 84, 255);">PK Digital Products</strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
+        <h1 style="color: #230D73; text-align: justify; max-width: 500px;">
+        <strong style="color: rgb(45, 84, 255);">PK Digital Products</strong>, reconhecida por sua qualidade, inovação e
+        atendimento personalizado.
     </h1>
-        <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-            <iframe loading="lazy"
-                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6_VU19lo&#x2F;view?embed"
-                allowfullscreen="allowfullscreen" allow="fullscreen">
-            </iframe>
-        </div>
-       <p style="color: white; font-size: medium;">
+    <p style="color: white; font-size: medium;">
         A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as
         últimas tendências tecnológicas.
     </p>
-       <h1>
+    <h1>
         Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
     </h1>
-    <section>
+      <section>
         <h1>
             Venha conversar e compartilhe sua ideia conosco.
         </h1>
@@ -65,15 +63,6 @@
             time de Desenvolvedores
         </p>
     </section>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-        border-radius: 8px; will-change: transform;">
-        <iframe loading="lazy"
-            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6tHK02tY&#x2F;view?embed"
-            allowfullscreen="allowfullscreen" allow="fullscreen">
-        </iframe>
-    </div>
     <section>
         <p>
             Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
@@ -185,20 +174,11 @@
             Aguardo ancioso para um entrevista.
         </strong>
     </h1>
-    <p>
-        Clique
-        <a href="https://iplis.ru/meu-portifolio" target="_blank">
-            <button type="button" id="ixd01">
-                aqui
-            </button>
-        </a>
-        para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
-    </p>
-    <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img style="border-radius: 15px;"
+        <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img style="border-radius: 15px;"
             src="digital.png" alt="digital"></a>
-    <iframe id="iframe"
+    <iframe id="iframe" width="100%" height="700px"
         src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-        frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
     <p style="text-align: center;">
         <strong style="color: #230D73;">ATENÇÃO !</strong>
     </p>
@@ -208,10 +188,17 @@
         INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
         CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
     </label>
-
+    <p>
+        Clique
+        <a href="https://iplis.ru/meu-portifolio" target="_blank">
+            <button type="button" id="ixd01">
+                aqui
+            </button>
+        </a>
+        para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
+    </p>
     <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-    padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-    border-radius: 8px; will-change: transform;">
+    padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; will-change: transform;">
         <iframe loading="lazy"
             style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
             src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
