--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="digital.png" type="image/x-icon">
+    <link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon">
     <title>Portifolio</title>
 </head>
 
@@ -33,12 +33,7 @@
                 </li>
             </ul>
         </nav>
-        <div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-bottom: 0.9em; overflow: hidden; will-change: transform;">
-         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF7IbNtW9M&#x2F;watch?embed" aria-controls="none"  allowfullscreen="allowfullscreen" allow="fullscreen">
-         </iframe>
-       </div>
+  <video src="CRIE SEU PRÓPRIO AMBIENTE DIGITAL CONOSCO.mp4" autoplay controls="0" loop muted></video>
         <picture id="moon">
             <img src="lokoPK.png" alt="">
         </picture>
